--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   "configurations": [
     {
       "type": "node",
+      "protocol": "inspector",
       "request": "launch",
       "name": "Mocha Tests",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
@@ -21,6 +22,7 @@
     },
     {
       "type": "node",
+      "protocol": "inspector",
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/dist/lib/index.js",
