--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/chai": "^4.0.10",
     "@types/colors": "^1.1.3",
     "@types/mocha": "^2.2.44",
+    "@types/node": "^8.5.1",
     "chai": "^4.1.2",
     "colors": "^1.1.2",
     "coveralls": "^3.0.0",
@@ -46,7 +47,5 @@
     "ts-node": "^4.0.2",
     "typescript": "^2.6.2"
   },
-  "dependencies": {
-    "@types/node": "^8.5.1"
-  }
+  "dependencies": {}
 }
