add coveralls script to travis-ci

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run compile && mocha dist/test/**/*.test.js",
     "test-fast": "mocha --require ts-node/register src/test/**/*.test.ts",
-    "test-cov": "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
+    "coverage": "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "compile": "rm -rf dist && tsc",
     "prepublish": "npm run compile && npm run test"
