--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "coveralls": "^3.0.0",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
+    "parse5": "^3.0.3",
     "prettier": "^1.9.2",
     "ts-node": "^4.0.2",
     "typescript": "^2.6.2"
