--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "description": "Fast HTML parser written in pure JavaScript",
   "main": "dist/lib/index.js",
   "typings": "dist/lib/index.d.ts",
-  "files": ["dist/lib"],
+  "files": [
+    "dist/lib"
+  ],
   "scripts": {
     "test": "npm run compile && mocha dist/test/**/*.test.js",
     "test-fast": "mocha --require ts-node/register src/test/**/*.test.ts",
-    "coverage":
-      "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
+    "coverage": "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "compile": "rm -rf dist && tsc",
     "prepublish": "npm run compile && npm run test"
   },
   "nyc": {
-    "extension": [".ts"],
-    "exclude": ["**/*.d.ts"]
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leizongmin/leizm-html-parser.git"
   },
-  "keywords": ["html", "parser"],
+  "keywords": [
+    "html",
+    "parser"
+  ],
   "author": "Zongmin Lei <leizongmin@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -32,17 +40,16 @@
   "devDependencies": {
     "@types/chai": "^4.0.10",
     "@types/colors": "^1.1.3",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^8.5.1",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.20",
     "chai": "^4.1.2",
     "colors": "^1.1.2",
     "coveralls": "^3.0.0",
-    "mocha": "^4.0.1",
-    "nyc": "^11.4.1",
-    "parse5": "^3.0.3",
-    "prettier": "^1.9.2",
-    "ts-node": "^4.0.2",
-    "typescript": "^2.6.2"
-  },
-  "dependencies": {}
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "parse5": "^6.0.1",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
