--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "coverage": "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "compile": "rm -rf dist && tsc",
-    "prepublish": "npm run compile && npm run test"
+    "prepublish": "npm run compile && npm run test",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "nyc": {
     "extension": [
