--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "compile": "rm -rf dist && tsc",
     "prepublish": "npm run compile && npm run test",
-    "format": "prettier --write 'src/**/*.ts'"
+    "format": "prettier --write 'src/**/*.ts'",
+    "build-one": "browserify -r ./dist/lib/index.js:@leizm/html-parser -o ./dist/parser.js && terser -o ./dist/parser.min.js ./dist/parser.js"
   },
   "nyc": {
     "extension": [
@@ -43,12 +44,14 @@
     "@types/colors": "^1.1.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.20",
+    "browserify": "^17.0.0",
     "chai": "^4.1.2",
     "colors": "^1.1.2",
     "coveralls": "^3.0.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
+    "terser": "^5.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
