--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@leizm/html-parser",
-  "version": "1.0.0-rc8",
+  "version": "1.0.0-rc9",
   "description": "Fast HTML parser written in pure JavaScript",
   "main": "dist/lib/index.js",
   "typings": "dist/lib/index.d.ts",
   "files": [
-    "dist/lib"
+    "dist/lib",
+    "dist/parser.js",
+    "dist/parser.min.js"
   ],
   "scripts": {
     "test": "npm run compile && mocha dist/test/**/*.test.js",
@@ -13,7 +15,7 @@
     "coverage": "nyc --reporter=lcov mocha --require ts-node/register src/test/**/*.test.ts && nyc report",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "compile": "rm -rf dist && tsc",
-    "prepublish": "npm run compile && npm run test",
+    "prepublish": "npm run compile && npm run test && npm run build-one",
     "format": "prettier --write 'src/**/*.ts'",
     "build-one": "browserify -r ./dist/lib/index.js:@leizm/html-parser -o ./dist/parser.js && terser -o ./dist/parser.min.js ./dist/parser.js"
   },
