--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "compile": "rm -rf dist && tsc",
     "prepublish": "npm run compile && npm run test && npm run build-one",
     "format": "prettier --write 'src/**/*.ts'",
-    "build-one": "browserify -r ./dist/lib/index.js:@leizm/html-parser -o ./dist/parser.js && terser -o ./dist/parser.min.js ./dist/parser.js"
+    "build-one": "browserify -r ./dist/lib/index.js:@leizm/html-parser -o ./dist/parser.js && terser -o ./dist/parser.min.js ./dist/parser.js",
+    "benchmark": "npm run compile && node dist/example/benchmark.js"
   },
   "nyc": {
     "extension": [
